--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,4 @@
-server.port = 8085
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://localhost:3306/emp
-spring.datasource.username=root
-spring.datasource.password=samsung
-spring.datasource.driver-class-name =com.mysql.jdbc.Driver
-spring.jpa.show-sql: true
+spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:${MYSQL_PORT:3306}/test
+spring.datasource.username=${MYSQL_USER:laravel}
+spring.datasource.password=${MYSQL_PASSWORD:laravel}
